--- a/style.css
+++ b/style.css
@@ -1,19 +1,21 @@
 * {
-    background-color: #ff7faa;
+    background-color: #1b85b8;
 }
 
 .header {
-    color:#7fffd4;
+    color:#c3cb71;
     background-color:black;
-    font-size: 60px;
+    font-size: 40px;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 400px;
+    height: auto;
 }
 
 a {
