--- a/recipes/style.css
+++ b/recipes/style.css
@@ -1,3 +1,8 @@
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
 body {
     background-color: #c3cb71;
 }
@@ -5,7 +10,6 @@ body {
 h1 {
     color:#1b85b8;
     background-color: #000000;
-    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     font-size: 40px;
 }
@@ -18,7 +22,6 @@ h1 {
     background-color: #1471db;
     text-align: left;
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
     padding: 30px;
 }
@@ -28,7 +31,6 @@ h1 {
 }
 
 h3 {
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 34px;
     text-align: center;
     color: #db7e14;
@@ -48,24 +50,21 @@ img {
 }
 
 .listy {
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
 }
 
 #note {
-    background-color: hsla(0, 0%, 0%, 0.562);
+    background-color: rgba(0, 0, 0, 0.562);
     margin-bottom: 0;
 }
 
 p {
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
 }
 
 div.end {
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
-    background-color: #00000052;
+    background-color: rgba(0, 0, 0, 0.322);
     margin: 0;
     padding: 8px;
 }
