--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     background-color: #1b85b8;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .header {
@@ -7,7 +8,6 @@
     background-color:black;
     font-size: 40px;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 img {
@@ -19,5 +19,5 @@ img {
 }
 
 a {
-    color: hsl(0, 0%, 0%);
+    color: rgb(0, 0, 0);
 }
